--- a/package.json
+++ b/package.json
@@ -8,22 +8,21 @@
     "build": "webpack --config ./webpack.config.js"
   },
   "dependencies": {
-    "@babel/core": "^7.2.0",
-    "@babel/preset-env": "^7.2.0",
-    "babel-loader": "^8.0.4",
-    "css-loader": "^2.0.1",
-    "eslint-plugin-jsx-a11y": "^6.1.2",
     "vue": "^2.5.21",
-    "vue-loader": "^15.4.2",
-    "vue-router": "^3.0.2",
-    "vue-style-loader": "^4.1.2",
-    "vue-template-compiler": "^2.5.21"
+    "vue-router": "^3.0.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.2.2",
+    "@babel/preset-env": "^7.2.0",
+    "babel-loader": "^8.0.4",
     "babel-preset-es2015": "^6.24.1",
+    "css-loader": "^2.0.1",
     "eslint": "^5.10.0",
     "eslint-loader": "^2.1.1",
     "eslint-plugin-vue": "^5.0.0",
+    "vue-loader": "^15.4.2",
+    "vue-style-loader": "^4.1.2",
+    "vue-template-compiler": "^2.5.21",
     "webpack": "^4.27.1",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10"
